--- a/2024/aoc2024/dune-project
+++ b/2024/aoc2024/dune-project
@@ -19,7 +19,7 @@
  (name aoc2024)
  (synopsis "A short synopsis")
  (description "A longer description")
- (depends ocaml dune zarith)
+ (depends ocaml dune zarith core)
  (tags
   (topics "to describe" your project)))
 
